[project]
name = "free-willy-mcp"
version = "0.1.0"
description = "An MCP server that provides AI agents with tools for autonomous behavior"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.1",
]

[project.scripts]
free-willy-mcp = "server:mcp.run"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.11.11",
]
